--- a/themes/hugo-nuo/exampleSite/config.toml
+++ b/themes/hugo-nuo/exampleSite/config.toml
@@ -20,7 +20,7 @@ copyright = "© This post is licensed under a Creative Commons Attribution-NonCo
   name = "Home"
   weight = 10
   identifier = "home"
-  url = "http://www.baidu.com"
+  url = "/"
 
 [[menu.main]]
   name = "Works"
@@ -44,7 +44,7 @@ copyright = "© This post is licensed under a Creative Commons Attribution-NonCo
   paginate = 10
 
   # Choose your social networks
-  email = "cmdgjw@hotmail.com"
+  email = "name@domain.com"
   github = "github_username"
   twitter = "twitter_username"
   linkedin = "linkedin_username"
