--- a/themes/hugo-nuo/theme.toml
+++ b/themes/hugo-nuo/theme.toml
@@ -1,13 +1,13 @@
 # theme.toml template for a Hugo theme
 # See https://github.com/gohugoio/hugoThemes#themetoml for an example
 
-name = "CrazyWolf"
+name = "Hugo Nuo"
 license = "MIT"
 licenselink = "https://github.com/laozhu/hugo-nuo/blob/master/LICENSE.md"
 description = "An responsive light & clean hugo theme for blogger."
 homepage = "https://github.com/laozhu/hugo-nuo"
 tags = ["Responsive", "blog", "Google analytics", "Disqus", "Light", "Clean", "Polyfill"]
-features = ["Blog", "Works",  "Portfolio"]
+features = ["Blog", "Works", "Links", "Portfolio"]
 min_version = "0.24"
 
 [author]
